--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "samir-salman-web-site",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://samirsalman.github.io/web-site",
+  "homepage": "http://samirsalman.github.io/web-site/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@zilahir/html5-device-mockups": "^3.2.5",
     "antd": "^3.26.2",
     "babel-plugin-import": "^1.13.0",
+    "html5-device-mockups": "^3.2.1",
     "react": "^16.12.0",
+    "react-device-mockups": "^0.1.3",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-scripts": "3.3.0",
