--- a/package.json
+++ b/package.json
@@ -1,51 +1,17 @@
 {
-  "name": "samir-salman-web-site",
-  "version": "0.1.0",
-  "private": true,
-  "homepage": "http://samirsalman.github.io/web-site/",
-  "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@zilahir/html5-device-mockups": "^3.2.5",
-    "antd": "^3.26.2",
-    "babel-plugin-import": "^1.13.0",
-    "html5-device-mockups": "^3.2.1",
-    "react": "^16.12.0",
-    "react-device-mockups": "^0.1.3",
-    "react-dom": "^16.12.0",
-    "react-redux": "^7.1.3",
-    "react-scripts": "3.3.0",
-    "react-twitter-embed": "^3.0.3",
-    "react-typist": "^2.0.5"
-  },
-  "theme": {
-    "primary-color": "#fff"
-  },
+  "name": "website",
+  "type": "module",
+  "version": "0.0.1",
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "antd-scss-theme-plugin": "^1.0.8"
+  "dependencies": {
+    "@astrojs/mdx": "^4.0.7",
+    "@astrojs/rss": "^4.0.11",
+    "@astrojs/sitemap": "^3.2.1",
+    "astro": "^5.1.10"
   }
 }
